--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
+    "moment": "^2.29.4",
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^6.5.2",
     "morgan": "~1.9.1",
